@@ -1,6 +1,6 @@
 Package: krm
-Version: 13.10-31
-Date: 2013-10-31
+Version: 13.11-03
+Date: 2013-11-03
 Title: Kernel-based Regression Models
 Imports:
 Author: Youyi Fong <youyifong@gmail.com>, Saheli Datta, Krisztian Sebestyen
@@ -11,7 +11,7 @@ Description: Testing methods for kernel-based regression models.
 License: GPL-2
 LazyLoad: yes
 LazyData: yes
-Date/Publication: 2013-11-03 18:14:08
-Packaged: 2013-11-03 16:58:36 UTC; yfong
+Date/Publication: 2013-11-05 08:57:30
+Packaged: 2013-11-05 07:55:18 UTC; ripley
 NeedsCompilation: yes
 Repository: CRAN
