@@ -1,5 +1,5 @@
-ba35c69c8d78727dd68d88de3c9e3a98 *ChangeLog
-4ee434ce0b756a55ae04b36536179611 *DESCRIPTION
+f692bacf037326c2b9b1d062d9f23b73 *ChangeLog
+e288dd378a89886e8ffe661522bc67f8 *DESCRIPTION
 67c2a220108f769ddee26754742517cd *NAMESPACE
 c28217a05515649b1915f9906c056930 *R/EQQ.R
 3ed1a91b97c85682a2c982401685a415 *R/dirichlet_functions.R
@@ -30,7 +30,7 @@ fccaa08ec07e2deb260ed3e10d3c1eab *man/chi.norm.Rd
 75fd0ac8139bda858ab59b84075ebe14 *man/dirichlet_functions.Rd
 fa1b7dae2a82f4fc49e127e9c6e276d0 *man/getSeqKernel.Rd
 e0aa7a0226752da8bb6fb903544da391 *man/krm.Rd
-d505636f881a3d9fb8a5361fc3e719f8 *man/krm.most.Rd
+57ec249029bb62e16930a816cbcb8bc5 *man/krm.most.Rd
 e4650367b25bd2f233b2261f37bfde7b *man/krm.score.test.Rd
 2f0b1380158ef5d6824d0bb2824bc461 *man/profile_HMM.Rd
 da12db8bcc82d7985a646210e6c66d72 *man/seq_alignment.Rd
@@ -41,18 +41,18 @@ afff9ce1d6a8cd88c2d0c25f3f75c55c *src/DirichletRV.h
 0e29839e89c5832cd5f9c23942c201b8 *src/MI_kernel.cpp
 2a6f9e9e044a78154d3cfda5936d6f48 *src/Makevars
 2a6f9e9e044a78154d3cfda5936d6f48 *src/Makevars.win
-c4ebaa048a7db0eb7f629804743171dc *src/MathPlus.h
+b3c61a26e1c6b5dac442f6207c17c64a *src/MathPlus.h
 5de86dd659ae4391abaed9f1272e0009 *src/MixtureDirichletRV.cpp
 3674bb362d4ff5ad8addd54170756c54 *src/MixtureDirichletRV.h
 5edc42b03c83006ffbc9ff18983ed928 *src/Observable.h
 bc1ad67ed5238b389bb32415c2d073e4 *src/ProteinSequence.cpp
 27aa7a8d91a0a28e1be026236f45a4da *src/ProteinSequence.h
-20e5297440d1ddd180b2da05eb278252 *src/RandomPlus.h
+f9cb3fde1ecfe5ca735ff2efdfcd52d3 *src/RandomPlus.h
 74d9be058c2864ff19f1e337e029b399 *src/StatPlus.h
-0000555fc681f7bc2902df7b95328353 *src/U.h
+379f4ba572ed33e11b4f50bf6814e3f2 *src/U.h
 b581b6030e7b32fd01ef15426c831aac *src/fromKrisz.c
 9597814309f5c4b104f7d4bb6320a8ea *src/rvgs.cpp
 e9dedb79359c1d90e4d05b7df5372c9a *src/rvgs.h
-2ef917d27c7b5618611c4b378c8ee49e *src/score_var.cpp
-42cf0e9ed4208d5894286a5737791fe8 *src/var_Q.cpp
+f007736f0142440bf4258832f8b2c778 *src/score_var.cpp
+dd6dc41dfad0a8099d25915b1441df8e *src/var_Q.cpp
 e221855f7cfe6f37f265f6e1966c8f6f *tests/doRUnit.R
